# franka_ros2

./: .gitignore  BRANCHES.md  CHANGELOG.rst  GRAVITY_COMPENSATION_FIX.md  Jenkinsfile  PROJECT_CONTEXT.md  README.md  analyze_contact_events.py  analyze_force_control.py  check_wrench_live.py  collect_and_visualize.py  collect_force_data.py  compare_controllers.py  dependency.repos  franka.repos  generate_hybrid_experiment_report.py  generate_pseudo_ink.py  generate_sweep_comparison.py  plot_force_data.py  plot_wrenches.py  run_exp_b1_force_hold.sh  run_exp_b_singularity.sh  run_exp_c1_ablation.sh  run_exp_c1_contact_cycling.sh  run_frequency_sweep.sh  run_hybrid_circle_force_experiment.sh  run_ood_experiment.sh  tune_pid.sh  verify_gravity_compensation.py  visualize_force_tracking.py  visualize_force_tracking_en.py  visualize_from_csv.py
.claude/: settings.json
.github/: copilot-instructions.md
TCST PG-GRU/document/: FR3_GRU_ForceControl_Plan.aux  Makefile  (+9 more)
docs/: iteration-log.md
franka_example_controllers/: CMakeLists.txt  README.md  franka_example_controllers.xml  package.xml
franka_gazebo/franka_ign_ros2_control/: ign_hardware_plugins.xml  package.xml
franka_robot_state_broadcaster/: package.xml
integration_launch_testing/: package.xml
koopman/: README.md  baselines.py  bo_residual.py  edmd.py  evaluate.py  evaluate_5model.py  evaluate_learned.py  evaluate_narx.py  evaluate_ood.py  evaluate_unified.py  learned_edmd.py  narx.py  plot_results.py  plot_spectrum.py  preprocess.py  residual_learned_edmd.py
results/: sensing_excitation_report.md
(+73 files in other folders)
